[tool.poetry]
name = "learn"
version = "0.1.0"
description = ""
authors = ["vasco_proger <perpendomobile@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
ipython = "^8.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-script = "scripts.script:main"

